<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  	 android:background="@android:color/white"
  android:layout_height="fill_parent">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		 
			

			
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp">
				
				<TextView android:text="@string/group_name" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				      android:textColor="@color/gray" 
				 android:textAppearance="?android:attr/textAppearanceMedium" />
				
				<EditText android:hint="Group Name ABC" 
				android:id="@+id/group_name" 
				android:layout_width="fill_parent" 

				android:layout_height="wrap_content" />
				
				<TextView android:text="@string/group_desription" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				      android:textColor="@color/gray" 
				android:textAppearance="?android:attr/textAppearanceMedium" />
				
				<EditText
					android:id="@+id/group_desription"
					android:hint="This is my love people group"
					android:layout_width="fill_parent"
					android:layout_height="100dp"
					android:inputType="textMultiLine" />
					
					<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/group_start_time_Layout" 
					android:background="@drawable/button"
				android:layout_margin="10dp">
				
					<TextView  android:id="@+id/group_start_time" 
					android:layout_width="fill_parent" 
					android:text="@string/group_start_time" 
					android:layout_height="wrap_content"
				      android:textColor="@android:color/white" 
					android:textSize="20dip"
					android:gravity="center"
					android:textAppearance="?android:attr/textAppearanceMedium" />
					
				</LinearLayout>	
				<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/group_end_time_Layout" 
				android:background="@drawable/button"
				android:layout_margin="10dp">
				
					<TextView android:id="@+id/group_end_time" 
					android:text="@string/group_end_time" 
					android:layout_width="fill_parent"
					android:textSize="20dip"
					android:gravity="center"
					      android:textColor="@android:color/white" 
					 android:layout_height="wrap_content"
					 android:textAppearance="?android:attr/textAppearanceMedium" />
					 
				 </LinearLayout>	
				 
			</LinearLayout>	
			
 
	</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center|center_vertical"
		android:background="@android:drawable/bottom_bar">
		<Button
			android:text="@string/cancel"
			android:id="@+id/btnCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button
			android:text="@string/submit"
			android:id="@+id/btnSubmit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>
