<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="horizontal">
		   <LinearLayout
		   android:orientation="vertical"
		  
						android:layout_weight="1"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"  >
		  			<Button  
					android:id="@+id/call"
					android:text="@string/call"
					android:layout_width="fill_parent"
					android:layout_height="40dip"
		 			android:background="@drawable/button"
					android:gravity="center"
 					android:layout_margin="10dp"
					android:textColor="@android:color/white" 
		
					 android:textAppearance="?android:attr/textAppearanceMedium" />
					 	<Button  
					android:id="@+id/share_location"
					android:text="@string/share_location"
					android:layout_width="fill_parent"
					android:layout_height="40dip"
		 			android:background="@drawable/button_light_blue"
					android:gravity="center"
 					android:layout_margin="10dp"
					android:textColor="@android:color/white" 
					 
					 android:textAppearance="?android:attr/textAppearanceMedium" />
   			</LinearLayout>
        				<LinearLayout
	 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
	 
						android:layout_weight="1"
			
				android:layout_margin="10dp">
				
					<Button 
					android:id="@+id/button_send"
					android:text="@string/call_and_share_location"
					android:layout_width="fill_parent"
					 android:layout_height="100dip"
		 			android:background="@drawable/button_red"
					android:gravity="center"

					android:textColor="@android:color/white" 
					
					 android:textAppearance="?android:attr/textAppearanceMedium" />
					 
				 </LinearLayout>
				
</LinearLayout>
